syntax = "proto3";

package datacore.adapter;

import "TagSearchService.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";


service AssetModelBrowserService {
    rpc BrowseAssetModelNodes(BrowseAssetModelNodesRequest) returns (stream AssetModelNode);
    rpc GetAssetModelNodes(GetAssetModelNodesRequest) returns (stream AssetModelNode);
    rpc FindAssetModelNodes(FindAssetModelNodesRequest) returns (stream AssetModelNode);
}


message BrowseAssetModelNodesRequest {
    string adapter_id = 1;
    int32 page_size = 2;
    int32 page = 3;
    string parent_id = 4;
}


message GetAssetModelNodesRequest {
    string adapter_id = 1;
    repeated string nodes = 2;
}


message FindAssetModelNodesRequest {
    string adapter_id = 1;
    int32 page_size = 2;
    int32 page = 3;
    string name = 4;
    string description = 5;
}


message AssetModelNode {
    string id = 1;
    string name = 2;
    string description = 3;
    string parent = 4;
    repeated string children = 5;
    repeated AssetModelNodeMeasurement measurements = 6;
    map<string, string> properties = 7;
}


message AssetModelNodeMeasurement {
    string name = 1;
    string adapter_id = 2;
    datacore.adapter.TagSummary tag = 3;
}